# rustframe

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/actions/runner-fallback/: action.yml
.github/htmldocs/: index.html
.github/runner/: Dockerfile  docker-compose.yml
.github/runner-arm/: example.env
.github/runners/runner-arm/: Dockerfile  docker-compose.yml  entrypoint.sh
.github/runners/runner-x64/: Dockerfile  start.sh
.github/scripts/: ci_checks.py  custom_benchmark_report.py  pr_checks.py  run_examples.sh
.github/workflows/: ci-checks.yml  docs-and-testcov.yml  pr-checks.yml  run-benchmarks-self-hosted.yml  run-benchmarks.yml  run-docs-and-doc-tests.yml  run-unit-tests.yml  run_tests.yml
benches/: benchmarks.rs
docs/: book.toml  build.sh  gen.sh
docs/src/: SUMMARY.md  compute.md  data-manipulation.md  introduction.md  machine-learning.md  utilities.md
examples/: correlation.rs  descriptive_stats.rs  distributions.rs  game_of_life.rs  inferential_stats.rs  k_means.rs  linear_regression.rs  logistic_regression.rs  pca.rs  random_demo.rs  random_stats.rs  stats_overview.rs
src/: lib.rs
src/compute/: activations.rs  mod.rs
src/compute/models/: activations.rs  dense_nn.rs  gaussian_nb.rs  k_means.rs  linreg.rs  logreg.rs  mod.rs  pca.rs
src/compute/stats/: correlation.rs  descriptive.rs  distributions.rs  inferential.rs  mod.rs
src/csv/: mod.rs
src/dataframe/: df.rs  mod.rs
src/frame/: base.rs  mat.rs  mod.rs  ops.rs
src/matrix/: boolops.rs  mat.rs  mod.rs  seriesops.rs
src/random/: crypto.rs  mod.rs  prng.rs  random_core.rs  randomx.rs  randomx_secure.rs  seq.rs
src/utils/: bdates.rs  dates.rs  mod.rs  spigots.rs
src/utils/dateutils/: bdates.rs  dates.rs  mod.rs
tests/: frame_tests.rs  mat_ops_tests.rs  mat_tests.rs  matrix_col_swap_tests.rs
