[package]
name = "rustframe"
version = "0.0.1-a.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A simple dataframe library"

[lib]
name = "rustframe"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = "^0.4.10"
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[features]
bench = ["dep:criterion"]

# [dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"], optional = true }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]
