[package]
name = "rustframe"
authors = ["Palash Tyagi (https://github.com/Magnus167)"]
version = "0.0.1-a.20250805"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A simple dataframe and math toolkit"
documentation = "https://magnus167.github.io/rustframe/"

[lib]
name = "rustframe"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = "^0.4.10"
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[features]
bench = ["dep:criterion"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]
